# nubela-api

./: Makefile  README.md  pyproject.toml
nubela_api/: __init__.py  person_api.py
nubela_api/models/: profile.py  response.py
tests/: test_queries.py
tests/examples/: error_example.json  person_example.json
