[tool.poetry]
name = "nubela-api"
version = "0.2.0"
description = ""
authors = ["leeparnell <152523161+leeparnell@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "nubela_api" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
types-requests = "^2.32.0.20240622"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.tomlsort]
all = true
in_place = true
overrides."tool.poetry.dependencies".first = ["python"]
