[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["leeparnell <152523161+leeparnell@users.noreply.github.com>"]
description = ""
name = "nubela-api"
packages = [{include = "nubela_api"}]
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.4"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
types-requests = "^2.32.0.20240622"

[tool.tomlsort]
all = true
in_place = true
overrides."tool.poetry.dependencies".first = ["python"]
